styling changes to Splash Tabs and WelcomePanel to correct scaling/overflow issues in different screen ratios

--- a/frontend/src/components/SplashPageParts/splash-tabs/SplashTabs.css
+++ b/frontend/src/components/SplashPageParts/splash-tabs/SplashTabs.css
@@ -4,16 +4,12 @@
   border-style: ridge;
   padding-left: 0.3rem;
   padding-right: 0.3rem;
-}
-
-.react-tabs {
   height: 85vh;
 }
 
 .react-tabs__tab-panel {
-  overflow: hidden;
-  overflow-y: scroll;
-  height: 79vh;
+  overflow-y: auto;
+  height: 78vh;
 }
 
 .react-tabs__tab {
